--- a/src/styles/Index.scss
+++ b/src/styles/Index.scss
@@ -16,6 +16,9 @@ body {
   }
   input{
     border: none;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 24px;
   }
   input:focus{
     outline: none;
@@ -75,10 +78,12 @@ body {
   // background-color: yellow;
   display: flex;
   gap: 8px;
+  width: 100%;
   max-width: 578px;
   border-radius: 8px;
   border: 1px solid #cecece;
   padding: 10px 14px;
+  justify-content: space-between;
 }
 #search-task {
   max-width: 1312px;
@@ -86,6 +91,32 @@ body {
   // background-color: red;
   max-width: 522px;
   height: 24px;
+}
+.sort{
+  font-size: .875rem;
+  color: #09174A;
+  font-weight: 600;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  line-height: 17.07px;
+  select{
+    height: 35px;
+    border: 1px solid #cecece;
+    option{
+      border: none;
+      font-family:"Montserrat", sans-serif; ;
+      background-color:#0C39C7 ;
+      border-radius: 5px;
+      font-size:0.875rem;
+      color: white;
+      font-weight: 500;
+    }
+  }
+  select:focus{
+    outline: none;
+    box-shadow: none;
+  }
 }
 .task-container {
   margin: auto;
@@ -100,6 +131,11 @@ body {
   width: 100%;
   display: flex;
   gap: 20px;
+  justify-content: space-between;
+  font-size: 1.125rem;
+  font-weight: 600;
+  line-height: 21.94px;
+  color: #8B8B8B;
 }
 .task-child{
   display: flex;
@@ -129,15 +165,21 @@ body {
   flex-direction: column;
   gap: 12px;
 }
+.task-description{
+  font-size: 0.875rem;
+  font-weight: 400;
+  color: #475467;
+  line-height: 20px;
+}
 /* Index.css */
 /* Index.css */
 .task-card .card-date {
   max-width: 120px;
   display: flex;
   align-items: center;
-  gap: 5px;
-  padding: 5px 10px;
-  border-radius: 5px;
+  gap: 4px;
+  padding: 2px 8px;
+  border-radius: 4px;
 }
 
 .task-card .card-date img {
@@ -146,12 +188,12 @@ body {
 }
 
 .task-card .card-date.overdue {
-  background-color: #ffcccc; /* Light red background */
-  color: #ff0000; /* Red text color */
+  background: #C035030F ; /* Light red background */
+  color: red; /* Red text color */
 }
 
 .task-card .card-date.overdue img {
-  filter: invert(33%) sepia(100%) saturate(7452%) hue-rotate(359deg) brightness(107%) contrast(113%);
+  filter: invert(33%) sepia(100%) saturate(7452%) hue-rotate(359deg) brightness(100%) contrast(113%);
   /* Red filter for the calendar icon */
 }
 
@@ -164,10 +206,42 @@ body {
   justify-content: space-between;
   // flex-direction: column;
 }
+.task-card-text {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 8px;
+  font-size: 1.175rem;
+  line-height: 21.94px;
+  font-weight: 600;
+  color: #282829;
+}
+.indicator{
+  display: inline-block;
+  width: 11px;
+  height: 11px;
+  background-color: #EBB705;
+  border-radius: 50%;
+}
+.indicator.indicated{
+  display: inline-block;
+  width: 11px;
+  height: 11px;
+  background-color: #26AD13;
+  border-radius: 50%;
+}
 .task-card-buttons {
   display: flex;
   gap: 16px;
   // background-color: red;
+}
+.cancel-btn{
+  border-radius: 8px;
+  padding: 10px 20px;
+  border: 1px solid #d0d5dd;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #7E7E7F;
 }
 input[type="checkbox"] {
   appearance: none;
@@ -192,11 +266,14 @@ input[type="checkbox"] {
   justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, 0.5);
+  z-index: 10;
 }
 .task-form {
   display: flex;
   flex-direction: column;
+  align-items: center;
   max-width: 654px;
+  width: 100%;
   border-radius: 12px;
   padding: 40px;
   gap: 32px;
@@ -205,19 +282,33 @@ input[type="checkbox"] {
   // z-index: 10;
   border: 1px solid #cecece;
 }
+.desc-img{
+  display: flex;
+  gap: 5px;
+}
 .task-form-header {
   display: flex;
   justify-content: space-between;
   max-width: 574px;
+  width: 100%;
+}
+.task-form-header-title{
+  font-size: 1.25rem;
+  color: #09174A;
+  font-weight: 600;
+  line-height: 24.38px;
 }
 .task-form-inputs {
   // background-color: yellowgreen;
   max-width: 574px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 32px;
 }
 .task-form-inputs-item {
+  max-width:574px ;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 6px;
@@ -269,13 +360,14 @@ input[type="checkbox"] {
 }
 .clear-tasks-button {
   display: flex;
-  background-color: blue;
-  margin-left: auto;
-  color: white;
+  grid-area: 8px;
+  color: #0C39C7;
   border: none;
-  padding: 8px 16px;
-  border-radius: 4px;
-  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: 1px solid #0C39C7;
+  font-size: 0.875rem;
+  font-weight: 600;
 }
 /* DeleteConfirmation.css */
 .delete-confirmation-popup {
@@ -291,26 +383,53 @@ input[type="checkbox"] {
 }
 
 .delete-confirmation-content {
+  width: 100%;
+  max-width: 654px;
   background: white;
-  padding: 20px;
+  padding: 40px;
   border-radius: 8px;
   text-align: center;
+  border-radius: 12px;
+  border: 1px solid #cecece;
+  p{
+    color: #09174A;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 19.5px;
+  }
+}
+.delete-title{
+  font-size: 1.175rem;
+  color: #09174A;
+  line-height: 21.94px;
+  font-weight: 600;
+}
+.delete-content-sub{
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  align-items: center;
 }
 
 .confirm-button, .cancel-button {
+  color: #09174A;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 19.5px;
+  max-width: 94px;
   margin: 10px;
   padding: 10px 20px;
   border: none;
-  border-radius: 4px;
+  border-radius: 8px;
   cursor: pointer;
 }
 
 .confirm-button {
-  background-color: red;
+  background-color: #C0070B;
   color: white;
 }
 
 .cancel-button {
-  background-color: gray;
-  color: white;
+  color: #7E7E7F;
+  border: 1px solid #d0d5dd;
 }
